Grid wrapper added to main content, white space issue yet fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,17 @@ body {
     min-height: 100%;
 }
 
+.main__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: repeat(4, 1fr);
+    grid-template-areas: 
+    "sec1"
+    "sec2"
+    "sec3"
+    "sec4";
+}
+
 p {
     margin: 10px 0 10px 0;
 }
@@ -113,6 +124,19 @@ h3:last-of-type {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 9px;
+}
+
+#section1 {
+    grid-area: sec1;
+}
+.section2 {
+    grid-area: sec2;
+}
+.section3 {
+    grid-area: sec3;
+}
+.section4 {
+    grid-area: sec4;
 }
 
 .your-active-class, .section3 {
@@ -218,4 +242,5 @@ h3:last-of-type {
     height: 99px;
     min-height: 12.6vh;
 }
+
 }
